{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 83,
  "lineage": "9ad86be0-4159-2c2c-f5d8-a1b7261a25f9",
  "resources": [
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e3df83cd6630da18",
            "arn": "arn:aws:ec2:eu-west-1:056341052778:instance/i-07c14903d78e10e5f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sno-2-brfhr-master-profile",
            "id": "i-07c14903d78e10e5f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6i.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0c81f4c5ca340ba0a"
              }
            ],
            "primary_network_interface_id": "eni-0c81f4c5ca340ba0a",
            "private_dns": "ip-10-0-134-168.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.134.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:056341052778:key/d7489478-8a71-4dca-898b-20a7b4cc533c",
                "throughput": 125,
                "volume_id": "vol-03372ed11a04344ec",
                "volume_size": 120,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cabfbf3c303d6a6",
            "tags": {
              "Name": "sno-2-brfhr-master-0",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "tags_all": {
              "Name": "sno-2-brfhr-master-0",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "sno-2-brfhr-master-0-vol",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "vpc_security_group_ids": [
              "sg-01cfb9c284cbf3a48"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-aint/9c3ca55d44346ef3-20230223185258278300000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-aint/9c3ca55d44346ef3",
            "target_id": "10.0.134.168"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-sint/1351007466353d78-20230223185258273700000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-sint/1351007466353d78",
            "target_id": "10.0.134.168"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-aext/5a590e25abbd9ad7-20230223185258276600000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-aext/5a590e25abbd9ad7",
            "target_id": "10.0.134.168"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:056341052778:network-interface/eni-0c81f4c5ca340ba0a",
            "description": "Created By OpenShift Installer",
            "id": "eni-0c81f4c5ca340ba0a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:7b:f2:b3:30:cf",
            "owner_id": "056341052778",
            "private_dns_name": "ip-10-0-134-168.eu-west-1.compute.internal",
            "private_ip": "10.0.134.168",
            "private_ip_list": [
              "10.0.134.168"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.134.168"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01cfb9c284cbf3a48"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cabfbf3c303d6a6",
            "tags": {
              "Name": "sno-2-brfhr-master-0",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "tags_all": {
              "Name": "sno-2-brfhr-master-0",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:056341052778:subnet/subnet-066cf441395b8d82c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 8183,
            "cidr_block": "10.0.192.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066cf441395b8d82c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056341052778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "argo-hub-5zqs6-private-eu-west-1c",
              "kubernetes.io/cluster/argo-hub-5zqs6": "owned",
              "kubernetes.io/cluster/sno-1-wwr7m": "shared",
              "kubernetes.io/cluster/sno-2-brfhr": "shared",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0e1ca3462357ea0ad"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:056341052778:subnet/subnet-0e242fe56a35c7a12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 8183,
            "cidr_block": "10.0.160.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e242fe56a35c7a12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056341052778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "argo-hub-5zqs6-private-eu-west-1b",
              "kubernetes.io/cluster/argo-hub-5zqs6": "owned",
              "kubernetes.io/cluster/sno-1-wwr7m": "shared",
              "kubernetes.io/cluster/sno-2-brfhr": "shared",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0e1ca3462357ea0ad"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:056341052778:subnet/subnet-00cabfbf3c303d6a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 8182,
            "cidr_block": "10.0.128.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cabfbf3c303d6a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056341052778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "argo-hub-5zqs6-private-eu-west-1a",
              "kubernetes.io/cluster/argo-hub-5zqs6": "owned",
              "kubernetes.io/cluster/sno-1-wwr7m": "shared",
              "kubernetes.io/cluster/sno-2-brfhr": "shared",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0e1ca3462357ea0ad"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:056341052778:subnet/subnet-060314dc649dc0a23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 8182,
            "cidr_block": "10.0.0.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060314dc649dc0a23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056341052778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "argo-hub-5zqs6-public-eu-west-1a",
              "kubernetes.io/cluster/argo-hub-5zqs6": "owned",
              "kubernetes.io/cluster/sno-1-wwr7m": "shared",
              "kubernetes.io/cluster/sno-2-brfhr": "shared"
            },
            "vpc_id": "vpc-0e1ca3462357ea0ad"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:056341052778:subnet/subnet-03d9895c4c42bce13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 8182,
            "cidr_block": "10.0.64.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d9895c4c42bce13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056341052778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "argo-hub-5zqs6-public-eu-west-1c",
              "kubernetes.io/cluster/argo-hub-5zqs6": "owned",
              "kubernetes.io/cluster/sno-1-wwr7m": "shared",
              "kubernetes.io/cluster/sno-2-brfhr": "shared"
            },
            "vpc_id": "vpc-0e1ca3462357ea0ad"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:056341052778:subnet/subnet-0a589b1f897251cad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 8183,
            "cidr_block": "10.0.32.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a589b1f897251cad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056341052778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "argo-hub-5zqs6-public-eu-west-1b",
              "kubernetes.io/cluster/argo-hub-5zqs6": "owned",
              "kubernetes.io/cluster/sno-1-wwr7m": "shared",
              "kubernetes.io/cluster/sno-2-brfhr": "shared"
            },
            "vpc_id": "vpc-0e1ca3462357ea0ad"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:056341052778:vpc/vpc-0e1ca3462357ea0ad",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05dde400ba57f1465",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-09b6e2ccf6f075756",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e1ca3462357ea0ad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04b31f3081c4a9a38",
            "owner_id": "056341052778",
            "tags": {
              "Name": "argo-hub-5zqs6-vpc",
              "kubernetes.io/cluster/argo-hub-5zqs6": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_external",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:loadbalancer/net/sno-2-brfhr-ext/4239f75308b30af1",
            "arn_suffix": "net/sno-2-brfhr-ext/4239f75308b30af1",
            "dns_name": "sno-2-brfhr-ext-4239f75308b30af1.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:loadbalancer/net/sno-2-brfhr-ext/4239f75308b30af1",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "sno-2-brfhr-ext",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d9895c4c42bce13"
              },
              {
                "subnet_id": "subnet-060314dc649dc0a23"
              },
              {
                "subnet_id": "subnet-0a589b1f897251cad"
              }
            ],
            "subnets": [
              "subnet-03d9895c4c42bce13",
              "subnet-060314dc649dc0a23",
              "subnet-0a589b1f897251cad"
            ],
            "tags": {
              "Name": "sno-2-brfhr-ext",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "tags_all": {
              "Name": "sno-2-brfhr-ext",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-0e1ca3462357ea0ad",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.data.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:loadbalancer/net/sno-2-brfhr-int/1797c524230e26bd",
            "arn_suffix": "net/sno-2-brfhr-int/1797c524230e26bd",
            "dns_name": "sno-2-brfhr-int-1797c524230e26bd.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:loadbalancer/net/sno-2-brfhr-int/1797c524230e26bd",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "sno-2-brfhr-int",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00cabfbf3c303d6a6"
              },
              {
                "subnet_id": "subnet-066cf441395b8d82c"
              },
              {
                "subnet_id": "subnet-0e242fe56a35c7a12"
              }
            ],
            "subnets": [
              "subnet-00cabfbf3c303d6a6",
              "subnet-066cf441395b8d82c",
              "subnet-0e242fe56a35c7a12"
            ],
            "tags": {
              "Name": "sno-2-brfhr-int",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "tags_all": {
              "Name": "sno-2-brfhr-int",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-0e1ca3462357ea0ad",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.data.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_external_api",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:listener/net/sno-2-brfhr-ext/4239f75308b30af1/635d9a6abc7c4d33",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-aext/5a590e25abbd9ad7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:listener/net/sno-2-brfhr-ext/4239f75308b30af1/635d9a6abc7c4d33",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:loadbalancer/net/sno-2-brfhr-ext/4239f75308b30af1",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_external",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.data.aws_subnet.public",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_api",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:listener/net/sno-2-brfhr-int/1797c524230e26bd/8f111252855ee73f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-aint/9c3ca55d44346ef3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:listener/net/sno-2-brfhr-int/1797c524230e26bd/8f111252855ee73f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:loadbalancer/net/sno-2-brfhr-int/1797c524230e26bd",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_services",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:listener/net/sno-2-brfhr-int/1797c524230e26bd/811145c5aa186d04",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-sint/1351007466353d78",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:listener/net/sno-2-brfhr-int/1797c524230e26bd/811145c5aa186d04",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:loadbalancer/net/sno-2-brfhr-int/1797c524230e26bd",
            "port": 22623,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_external",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-aext/5a590e25abbd9ad7",
            "arn_suffix": "targetgroup/sno-2-brfhr-aext/5a590e25abbd9ad7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-aext/5a590e25abbd9ad7",
            "lambda_multi_value_headers_enabled": false,
            "name": "sno-2-brfhr-aext",
            "port": 6443,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "sno-2-brfhr-aext",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "tags_all": {
              "Name": "sno-2-brfhr-aext",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0e1ca3462357ea0ad"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-aint/9c3ca55d44346ef3",
            "arn_suffix": "targetgroup/sno-2-brfhr-aint/9c3ca55d44346ef3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-aint/9c3ca55d44346ef3",
            "lambda_multi_value_headers_enabled": false,
            "name": "sno-2-brfhr-aint",
            "port": 6443,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "sno-2-brfhr-aint",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "tags_all": {
              "Name": "sno-2-brfhr-aint",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0e1ca3462357ea0ad"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-sint/1351007466353d78",
            "arn_suffix": "targetgroup/sno-2-brfhr-sint/1351007466353d78",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "22623",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:056341052778:targetgroup/sno-2-brfhr-sint/1351007466353d78",
            "lambda_multi_value_headers_enabled": false,
            "name": "sno-2-brfhr-sint",
            "port": 22623,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "sno-2-brfhr-sint",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "tags_all": {
              "Name": "sno-2-brfhr-sint",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0e1ca3462357ea0ad"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:056341052778:security-group/sg-01cfb9c284cbf3a48",
            "description": "Created By OpenShift Installer",
            "egress": [],
            "id": "sg-01cfb9c284cbf3a48",
            "ingress": [],
            "name": "terraform-20230223185228559500000003",
            "name_prefix": "terraform-",
            "owner_id": "056341052778",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sno-2-brfhr-master-sg",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "tags_all": {
              "Name": "sno-2-brfhr-master-sg",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-0e1ca3462357ea0ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:056341052778:security-group/sg-07e2f6ea70cd2699a",
            "description": "Created By OpenShift Installer",
            "egress": [],
            "id": "sg-07e2f6ea70cd2699a",
            "ingress": [],
            "name": "terraform-20230223185228557300000001",
            "name_prefix": "terraform-",
            "owner_id": "056341052778",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sno-2-brfhr-worker-sg",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "tags_all": {
              "Name": "sno-2-brfhr-worker-sg",
              "kubernetes.io/cluster/sno-2-brfhr": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-0e1ca3462357ea0ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_egress",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-507124997",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-2771257944",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-1705593670",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": "sg-07e2f6ea70cd2699a",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_etcd",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 2379,
            "id": "sgrule-819921903",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-963943457",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-4193508671",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": "sg-07e2f6ea70cd2699a",
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_https",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 6443,
            "id": "sgrule-64264441",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_icmp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": -1,
            "id": "sgrule-4161043059",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-1251763902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-2317035424",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": "sg-07e2f6ea70cd2699a",
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-242814389",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-3472772267",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": "sg-07e2f6ea70cd2699a",
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-3252893047",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-23360617",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": "sg-07e2f6ea70cd2699a",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-2772162438",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": "sg-07e2f6ea70cd2699a",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-1706858136",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10257,
            "id": "sgrule-2014435775",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10257,
            "id": "sgrule-3096877217",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": "sg-07e2f6ea70cd2699a",
            "timeouts": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10259,
            "id": "sgrule-3097345340",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10259,
            "id": "sgrule-2015034402",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": "sg-07e2f6ea70cd2699a",
            "timeouts": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-4126107870",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-896018880",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": "sg-07e2f6ea70cd2699a",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6641,
            "id": "sgrule-2031723176",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6641,
            "id": "sgrule-3114197942",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": "sg-07e2f6ea70cd2699a",
            "timeouts": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-369241431",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-3599068233",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": "sg-07e2f6ea70cd2699a",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-2992475832",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-1926942630",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": "sg-07e2f6ea70cd2699a",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ssh",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22,
            "id": "sgrule-1988196354",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-3049057561",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-1966844935",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": "sg-07e2f6ea70cd2699a",
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_mcs",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22623,
            "id": "sgrule-3855403001",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cfb9c284cbf3a48",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22623,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_egress",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-608656053",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-3425095684",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-211915034",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": false,
            "source_security_group_id": "sg-01cfb9c284cbf3a48",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-1114783030",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-2197126184",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": false,
            "source_security_group_id": "sg-01cfb9c284cbf3a48",
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_icmp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": -1,
            "id": "sgrule-2541762457",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-1222147771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-2287943589",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": false,
            "source_security_group_id": "sg-01cfb9c284cbf3a48",
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_nat_t",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-1971301538",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-3135607904",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-2053297534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": false,
            "source_security_group_id": "sg-01cfb9c284cbf3a48",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-3728570001",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": false,
            "source_security_group_id": "sg-01cfb9c284cbf3a48",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-515520399",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-1151388528",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-2217183854",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": false,
            "source_security_group_id": "sg-01cfb9c284cbf3a48",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_nat_t_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-3052989884",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": false,
            "source_security_group_id": "sg-01cfb9c284cbf3a48",
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-2806877945",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-1741344743",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": false,
            "source_security_group_id": "sg-01cfb9c284cbf3a48",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-51522838",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-3281349640",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": false,
            "source_security_group_id": "sg-01cfb9c284cbf3a48",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ssh",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22,
            "id": "sgrule-2042815400",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-3468315662",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-238882064",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07e2f6ea70cd2699a",
            "self": false,
            "source_security_group_id": "sg-01cfb9c284cbf3a48",
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    }
  ]
}